Fix sizing issue with jQuery pop ups (#2623)
* Fix sizing issue with jQuery pop ups

The default font size for jQuery popup widgets is 1.1em which is causing some longer pops to travel offscreen and become unreachable. This 1.1em is also larger than our applications default 14px and bootstrap's default 1rem, so apply the reduced sizing everywhere.

* - Use .rem to remain consistent with bs4's units of measure. Value remains the same.
- Restrict the maximum height to prevent it from being larger than the window with the action bar.
- Enable scrolling for overflow and disable scrolling for the close button in the header as it likes to appear
- Set the z-index to one above the action bar to ensure it's never stuck behind it. bs4 modals will display over this

--- a/app/assets/stylesheets/apps_every_page/offcanvas.scss
+++ b/app/assets/stylesheets/apps_every_page/offcanvas.scss
@@ -63,6 +63,16 @@
   }
 }
 
+.ui-widget {
+  font-size: 1rem;
+  overflow:auto;
+  max-height: 85%;
+  z-index:1031; // One above the action bar
+  .ui-dialog-titlebar-close {
+    overflow:hidden;
+  }
+}
+
 .ui-widget-header {
   background: #62bcf3;
 }
